# Supervised-Learning-project

./: LICENSE  README.md  _config.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/data/: house_data.csv  house_data.py
backend/model/: trainer.py
backend/model/saved_models/: linear_metrics.json  linear_model.pkl  tree_metrics.json  tree_model.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChartPanel.tsx  MetricCard.tsx  Navbar.tsx  PredictionPanel.tsx
frontend/src/pages/: About.tsx  Dashboard.tsx  Home.tsx
